fix: correct filtering items by tags